--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">OSteemt</string>
+    <string name="feed">Feed</string>
+    <string name="blog">Blog</string>
+    <string name="wallet">Wallet</string>
 </resources>
